Add static content

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,4 +1,17 @@
 body {
-  font-family: "Roboto Flex", sans-serif;
+    font-family: "Roboto Flex", sans-serif;
+    background: url(/images/bck.jpg) center center no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+}
+
+h1 {
+  color: white;
+  font-weight: bold;
+  font-style: italic;
+}
+
+.content {
   padding: 2rem;
 }
