--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -30,17 +30,27 @@ p:last-child {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  width: 95%;
+  width: 75%;
 }
 
 .header {
   padding: 2rem;
-  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
 }
 
 .header a {
   text-decoration: none;
   color: #333333;
+}
+
+.header h1 {
+  font-size: 3rem;
+}
+
+.header .icon {
+  height: 3rem;
+  margin-right: 1rem;
 }
 
 .navbar {
@@ -89,17 +99,16 @@ p:last-child {
 }
 
 .content::-webkit-scrollbar-track {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .content::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(0, 0, 0, 0.25);
   border-radius: 0.25rem;
 }
 
 .footer {
   padding: 2rem;
-  background: rgba(0, 0, 0, 0.5);
 }
 
 .error {
