--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,1 +1,4 @@
-<header class="header"><h1><a href="/">{{header}}</a></h1></header>
+<header class="header">
+  <img src="/images/icon.png" class="icon">
+  <h1><a href="/">{{header}}</a></h1>
+</header>
