--- a/templates/partials/404.hbs
+++ b/templates/partials/404.hbs
@@ -1,9 +1,7 @@
-<div class="content-error">
-  <h1 class="error">{{error}}</h1>
-	{{#if resource}}
-		<h3 class="error-resource">{{resource}}</h1>
-	{{/if}}
-	<div class="control">
-		<button class="btn ghost"><a href="/">Go back</a></button>
-	</div>
+<h1 class="error-title">{{error}}</h1>
+{{#if resource}}
+	<h3 class="error-resource">{{resource}}</h1>
+{{/if}}
+<div class="control">
+	<button class="btn ghost"><a href="/">Go back</a></button>
 </div>
